--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,8 @@
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         version="4.0"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
-                             http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
-
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+         https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         version="5.0">
   <servlet>
     <servlet-name>RegisterServlet</servlet-name>
     <servlet-class>com.hotel.servlet.RegisterServlet</servlet-class>
@@ -40,14 +39,7 @@
     <url-pattern>/SearchServlet</url-pattern>
   </servlet-mapping>
 
-  <servlet>
-    <servlet-name>BookRoomServlet</servlet-name>
-    <servlet-class>com.hotel.servlet.BookRoomServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>BookRoomServlet</servlet-name>
-    <url-pattern>/BookRoomServlet</url-pattern>
-  </servlet-mapping>
+  
 
   <servlet>
     <servlet-name>CancelBookingServlet</servlet-name>
